[ADD] submodule xmarts/l10n_ec_einvoice

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = xmarts/l10n_ec_payroll
 	url = git@github.com:xmarts/l10n_ec_payroll.git
 	branch = 14.0-payroll
+
+[submodule "xmarts/l10n_ec_einvoice"]
+	path = xmarts/l10n_ec_einvoice
+	url = git@github.com:xmarts/l10n_ec_einvoice.git
+	branch = 14.0-einvoice
