--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = git@github.com:xmarts/ks-dashboard-ninja.git
 	branch = 14.0
 
+
+[submodule "xmarts/l10n_ec_einvoice"]
+	path = xmarts/l10n_ec_einvoice
+	url = git@github.com:xmarts/l10n_ec_einvoice.git
+	branch = 14.0
