--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,8 @@
 
 
 
+
+[submodule "xmarts/l10n_ec_einvoice"]
+	path = xmarts/l10n_ec_einvoice
+	url = git@github.com:xmarts/l10n_ec_einvoice.git
+	branch = 14.0
